# ChangeLog for app-misc/dnetc
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/dnetc/ChangeLog,v 1.54 2009/04/02 01:45:01 robbat2 Exp $

*dnetc-2.9103.509 (02 Apr 2009)

  02 Apr 2009; Robin H. Johnson <robbat2@gentoo.org>
  -dnetc-2.9101.509.ebuild, +dnetc-2.9103.509.ebuild:
  Typod the version number.

*dnetc-2.9101.509 (02 Apr 2009)

  02 Apr 2009; Robin H. Johnson <robbat2@gentoo.org>
  +dnetc-2.9101.509.ebuild:
  NMU version bump, adds Core i7 detection that I need.

*dnetc-2.9101.507 (31 Dec 2008)

  31 Dec 2008; Jeremy Olexa <darkside@gentoo.org> +dnetc-2.9101.507.ebuild:
  (non maintianer commit) version bump. Thanks to Andrew MacKenzie for the
  submission in bug 248490

  28 Jul 2008; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml:
  Change to maintainer-needed.

  02 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  dnetc-2.9015.504.ebuild:
  stable x86

  10 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org> files/dnetc.initd:
  Updated Fair CPU Scheduler support with a patch from Arthur Hagen
  <art-gt@broomstick.com>. Closing bug #217082.

*dnetc-2.9015.504 (10 Apr 2008)

  10 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org> -files/dnetc.conf,
  -files/dnetc.init, -files/dnetc.init-r1, -files/dnetc.init-r2,
  files/dnetc.initd, dnetc-2.9001.478.ebuild, dnetc-2.9002.479.ebuild,
  dnetc-2.9003.481-r1.ebuild, dnetc-2.9011.496-r1.ebuild,
  dnetc-2.9011.498.ebuild, dnetc-2.9013.498.ebuild,
  +dnetc-2.9015.504.ebuild:
  Fixed init script searching for /etc/conf.d/dnetc incorrectly. Thanks to
  Arthur Hagen <art-gt@broomstick.com> for the fix. Added workaround for Fair
  Group CPU Scheduler. Thanks to Toralf Förster <toralf.foerster@gmx.de> for
  the fix. Version bump to 2.9015.504 for x86. QA cleanup: Fix quoting.
  Closing bug #209037, bug #209322, and bug #215052.

*dnetc-2.9013.498 (02 Feb 2008)

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> +files/dnetc.confd,