@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/dnetc/Attic/dnetc-2.9011.498.ebuild,v 1.5 2008/04/10 00:47:43 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/dnetc/Attic/dnetc-2.9011.498.ebuild,v 1.6 2009/11/18 03:14:18 jer Exp $
 
 inherit eutils versionator
 
@@ -15,7 +15,7 @@ LICENSE="distributed.net"
 SLOT="0"
 KEYWORDS="~x86 -*"
 IUSE=""
-RESTRICT="mirror"
+RESTRICT="mirror strip"
 
 DEPEND=""
 RDEPEND=""
