@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/dnetc/Attic/dnetc-2.9101.507.ebuild,v 1.1 2008/12/31 05:36:45 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/dnetc/Attic/dnetc-2.9101.507.ebuild,v 1.2 2009/11/18 03:14:18 jer Exp $
 
 inherit eutils
 
@@ -16,7 +16,7 @@ LICENSE="distributed.net"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
-RESTRICT="mirror"
+RESTRICT="mirror strip"
 
 DEPEND=""
 RDEPEND="net-dns/bind-tools"
