@@ -1,6 +1,13 @@
 # ChangeLog for app-misc/dnetc
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/dnetc/ChangeLog,v 1.54 2009/04/02 01:45:01 robbat2 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/dnetc/ChangeLog,v 1.55 2009/11/18 03:14:18 jer Exp $
+
+  18 Nov 2009; Jeroen Roovers <jer@gentoo.org> dnetc-2.9001.478.ebuild,
+  dnetc-2.9002.479.ebuild, dnetc-2.9003.481-r1.ebuild,
+  dnetc-2.9011.496-r1.ebuild, dnetc-2.9011.498.ebuild,
+  dnetc-2.9013.498.ebuild, dnetc-2.9015.504.ebuild, dnetc-2.9101.507.ebuild,
+  dnetc-2.9103.509.ebuild:
+  Set RESTRICT=strip (bug #251857).
 
 *dnetc-2.9103.509 (02 Apr 2009)
 
